[package]
authors.workspace = true
categories.workspace = true
description = "Java Virtual Machine"
edition.workspace = true
keywords = ["java", "jvm"]
license.workspace = true
name = "ristretto_vm"
repository.workspace = true
rust-version.workspace = true
version.workspace = true
build = "src/build/main.rs"

[lib]
name = "ristretto_vm"
path = "src/lib.rs"

# Add this section for build dependencies
[build-dependencies]
phf_codegen = { workspace = true }
ristretto_classfile = { path = "../ristretto_classfile", version = "0.22.0" }
syn = { workspace = true }
walkdir = { workspace = true }

[dependencies]
async-recursion = { workspace = true }
bitflags = { workspace = true }
byte-unit = { workspace = true }
byteorder = { workspace = true }
console = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
filetime = { workspace = true }
indexmap = { workspace = true }
os_info = { workspace = true }
phf = { workspace = true }
ristretto_classfile = { path = "../ristretto_classfile", version = "0.22.0" }
ristretto_classloader = { path = "../ristretto_classloader", version = "0.22.0" }
ristretto_jit = { path = "../ristretto_jit", version = "0.22.0" }
ristretto_macros = { path = "../ristretto_macros", version = "0.22.0" }
stacker = { workspace = true }
sysinfo = { workspace = true }
sys-locale = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
whoami = { workspace = true }
zerocopy = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }
tokio = { workspace = true, features = ["time"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
getrandom = { workspace = true }
thread-priority = { workspace = true }
tokio = { workspace = true, features = ["fs", "time"] }

[dev-dependencies]
criterion = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
walkdir = { workspace = true }

[features]
default = ["rustls-tls"]
native-tls = [
    "ristretto_classloader/native-tls",
]
rustls-tls = [
    "ristretto_classloader/rustls-tls",
]
url = [
    "ristretto_classloader/url",
]

[[bench]]
harness = false
name = "vm"

[lints.clippy]
result_large_err = { level = "allow", priority = 1 }

