[package]
authors.workspace = true
categories.workspace = true
description = "Java Virtual Machine"
edition.workspace = true
keywords = ["java", "jvm"]
license.workspace = true
name = "ristretto_vm"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "ristretto_vm"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
ahash = { workspace = true }
async-recursion = { workspace = true }
bitflags = { workspace = true }
byte-unit = { workspace = true }
byteorder = { workspace = true }
console = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
filetime = { workspace = true }
flate2 = { workspace = true }
indexmap = { workspace = true }
jiff = { workspace = true }
os_info = { workspace = true }
parking_lot = { workspace = true }
phf = { workspace = true }
rayon = { workspace = true }
ristretto_classfile = { path = "../ristretto_classfile", version = "0.28.0" }
ristretto_classloader = { path = "../ristretto_classloader", version = "0.28.0" }
ristretto_gc = { path = "../ristretto_gc", version = "0.28.0" }
ristretto_intrinsics = { path = "../ristretto_intrinsics", version = "0.28.0" }
ristretto_jit = { path = "../ristretto_jit", version = "0.28.0" }
ristretto_macros = { path = "../ristretto_macros", version = "0.28.0" }
ristretto_types = { path = "../ristretto_types", version = "0.28.0" }
stacker = { workspace = true }
sysinfo = { workspace = true }
sys-locale = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
whoami = { workspace = true }
zerocopy = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }
tokio = { workspace = true, features = ["time"] }
wasm-bindgen-futures = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
getrandom = { workspace = true }
thread-priority = { workspace = true }
tokio = { workspace = true, features = ["fs", "time"] }

[dev-dependencies]
criterion = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
walkdir = { workspace = true }

[features]
default = ["rustls-tls"]
native-tls = [
    "ristretto_classloader/native-tls",
]
rustls-tls = [
    "ristretto_classloader/rustls-tls",
]
startup-trace = []
url = [
    "ristretto_classloader/url",
]

[package.metadata.cargo-machete]
ignored = [
    # used by async functions in proc macros
    "async-recursion",
    # used by wasm target
    "getrandom",
]

[[bench]]
harness = false
name = "vm"
