[package]
authors.workspace = true
categories.workspace = true
description = "Java Virtual Machine"
edition.workspace = true
keywords = ["java", "jvm"]
license.workspace = true
name = "ristretto_vm"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "ristretto_vm"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
ahash = { workspace = true }
async-recursion = { workspace = true }
bitflags = { workspace = true }
byte-unit = { workspace = true }
byteorder = { workspace = true }
dashmap = { workspace = true }
flate2 = { workspace = true }
indexmap = { workspace = true }
jiff = { workspace = true }
parking_lot = { workspace = true }
ristretto_classfile = { path = "../ristretto_classfile", version = "0.31.1" }
ristretto_classloader = { path = "../ristretto_classloader", version = "0.31.1" }
ristretto_gc = { path = "../ristretto_gc", version = "0.31.1" }
ristretto_intrinsics = { path = "../ristretto_intrinsics", version = "0.31.1" }
ristretto_jit = { path = "../ristretto_jit", version = "0.31.1" }
ristretto_macros = { path = "../ristretto_macros", version = "0.31.1" }
ristretto_types = { path = "../ristretto_types", version = "0.31.1" }
sys-locale = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zerocopy = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { workspace = true }
tokio = { workspace = true, features = ["time"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
wasm-bindgen-futures = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
console = { workspace = true }
dirs = { workspace = true }
filetime = { workspace = true }
getrandom = { workspace = true }
os_info = { workspace = true }
rayon = { workspace = true }
stacker = { workspace = true }
sysinfo = { workspace = true }
thread-priority = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "time"] }
whoami = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
walkdir = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
rayon = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
default = ["rustls-tls"]
native-tls = [
    "ristretto_classloader/native-tls",
]
rustls-tls = [
    "ristretto_classloader/rustls-tls",
]
startup-trace = []
url = [
    "ristretto_classloader/url",
]

[package.metadata.cargo-machete]
ignored = [
    # used by async functions in proc macros
    "async-recursion",
    # used by wasm target
    "getrandom",
]

[[bench]]
harness = false
name = "vm"
