[package]
edition.workspace = true
name = "class_loader"
publish = false
license.workspace = true
version.workspace = true

[dependencies]
ristretto_classloader = { path = "../../ristretto_classloader" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
