[package]
edition.workspace = true
name = "runtime_class_loader"
publish = false
license.workspace = true
version.workspace = true

[dependencies]
ristretto_classloader = { path = "../../ristretto_classloader" }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
